--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/main_activity">
-
-    <TextView
-        android:id="@+id/movie_part_title"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/movie_part_title"
-        android:textAllCaps="true"
-        android:layout_alignParentTop="true"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/movies_rv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_below="@id/movie_part_title"
-        android:layout_alignParentStart="true"/>
+        android:id="@+id/main_activity">
+        <ImageView
+            android:id="@+id/backdrop_img"
+            android:layout_width="match_parent"
+            android:layout_height="225dp"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/default_poster"
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/show_part_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/movies_rv"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/show_part_title"
-        android:textAllCaps="true" />
+        <ImageView
+            android:id="@+id/gradient_img"
+            android:layout_width="match_parent"
+            android:layout_height="225dp"
+            android:src="@drawable/gradient_bg"
+            android:layout_alignParentTop="true"
+            tools:ignore="ContentDescription"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/shows_rv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_below="@id/show_part_title"
-        android:layout_alignParentStart="true"/>
-</RelativeLayout>
+        <TextView
+            android:id="@+id/homepage_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/gradient_img"
+            android:layout_marginTop="150dp"
+            android:layout_marginStart="16dp"
+            android:textStyle="bold"
+            android:textSize="50sp"
+            android:textColor="@color/white"
+            android:textAllCaps="true"
+            android:text="@string/homescreen_title"/>
+
+        <TextView
+            android:id="@+id/movie_part_title"
+            android:layout_below="@id/backdrop_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/movie_part_title"
+            android:textAllCaps="true"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/movies_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/movie_part_title"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"/>
+
+        <TextView
+            android:id="@+id/show_part_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/movies_rv"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/show_part_title"
+            android:textAllCaps="true" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/shows_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/show_part_title"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"/>
+    </RelativeLayout>
+</ScrollView>
