--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/home_item_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_below="@id/home_item_img"
         android:text="test"
         android:layout_marginTop="4dp"
