--- a/app/src/main/res/layout/actor_item.xml
+++ b/app/src/main/res/layout/actor_item.xml
@@ -30,7 +30,7 @@
     <TextView
         android:id="@+id/actor_job"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_below="@id/actor_name"
         android:text="Réalisateur"
         android:textSize="11sp"
