--- a/app/src/main/res/drawable/layout_bg.xml
+++ b/app/src/main/res/drawable/layout_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#C9C9C9"/>
-    <stroke android:width="10dp" android:color="@color/design_default_color_primary" />
-    <corners android:radius="30dp"/>
+    <solid android:color="#F5F5F5"/>
+    <stroke android:width="2dp" android:color="#000000" />
+    <corners android:radius="15dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
