--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="175dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/default_poster"
         tools:ignore="ContentDescription"/>
 
     <TextView
