--- a/app/src/main/res/layout/watchlist_item.xml
+++ b/app/src/main/res/layout/watchlist_item.xml
@@ -1,9 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/layout_bg">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/layout_bg"
+    android:padding="10dp">
 
+    <ImageView
+        android:id="@+id/watchlist_poster"
+        android:layout_width="100dp"
+        android:layout_height="150dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/default_poster"
+        android:scaleType="centerCrop"
+        tools:ignore="ContentDescription" />
 
+    <TextView
+        android:id="@+id/watchlist_movie_title"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/watchlist_poster"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
+        android:textAllCaps="true"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:text="titre"/>
+
+    <TextView
+        android:id="@+id/watchlist_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/watchlist_movie_title"
+        app:layout_constraintLeft_toLeftOf="@id/watchlist_movie_title"
+        android:layout_marginTop="8dp"
+        android:textAllCaps="true"
+        android:textSize="11sp"
+        android:text="Vu le : 16/05/22"/>
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="?android:attr/ratingBarStyleIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="40sp"
+            app:layout_constraintTop_toBottomOf="@id/watchlist_date"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toLeftOf="@id/watchlist_movie_title"/>
+
+        <Button
+            android:id="@+id/watchlist_delete_button"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            app:layout_constraintLeft_toRightOf="@id/ratingBar"
+            app:layout_constraintBottom_toBottomOf="@id/ratingBar"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@drawable/delete_button_bg"
+            android:backgroundTint="@color/black"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
