--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,12 +82,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/srch"
-            android:text="Rechercher un film ou une série"
+            android:hint="Rechercher un film ou une série"
             android:layout_below="@+id/shows_rv"
             android:layout_marginTop="16dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:gravity="center"
+            android:gravity="left"
             />
         <TableLayout
             android:layout_width="match_parent"
