--- a/app/src/main/res/layout/activity_watchlist.xml
+++ b/app/src/main/res/layout/activity_watchlist.xml
@@ -1,64 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_activity">
-    <ImageView
-        android:id="@+id/backdrop_img"
-        android:layout_width="match_parent"
-        android:layout_height="225dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/home_cover"
-        android:scaleType="centerCrop"
-        tools:ignore="ContentDescription" />
 
-    <ImageView
-        android:id="@+id/gradient_img"
-        android:layout_width="match_parent"
-        android:layout_height="225dp"
-        android:src="@drawable/gradient_bg"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/backdrop_img"
+            android:layout_width="match_parent"
+            android:layout_height="225dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/home_cover"
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/homepage_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/backdrop_img"
-        app:layout_constraintStart_toStartOf="@id/backdrop_img"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/watchlist_title"
-        android:textAllCaps="true"
-        android:textColor="@color/white"
-        android:textSize="40sp"
-        android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/gradient_img"
+            android:layout_width="match_parent"
+            android:layout_height="225dp"
+            android:src="@drawable/gradient_bg"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription"/>
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/watchlist_tabs"
-        app:layout_constraintTop_toBottomOf="@id/backdrop_img"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/backdrop_img">
-
-        <com.google.android.material.tabs.TabItem
+        <TextView
+            android:id="@+id/homepage_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/movie" />
+            app:layout_constraintBottom_toBottomOf="@id/backdrop_img"
+            app:layout_constraintStart_toStartOf="@id/backdrop_img"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/watchlist_title"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="40sp"
+            android:textStyle="bold" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/watchlist_tabs"
+            app:layout_constraintTop_toBottomOf="@id/backdrop_img"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/tvshow" />
+            android:layout_below="@id/backdrop_img">
 
-    </com.google.android.material.tabs.TabLayout>
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/movie" />
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/watchlist_vp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/watchlist_tabs"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tvshow" />
+
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/watchlist_vp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/watchlist_tabs" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
