--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,133 +3,133 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content">
 
-        android:id="@+id/main_activity">
-        <ImageView
-            android:id="@+id/backdrop_img"
-            android:layout_width="match_parent"
-            android:layout_height="225dp"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/home_cover"
-            android:scaleType="centerCrop"
-            tools:ignore="ContentDescription" />
-
-        <ImageView
-            android:id="@+id/gradient_img"
-            android:layout_width="match_parent"
-            android:layout_height="225dp"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/gradient_bg"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/homepage_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/gradient_img"
-            android:layout_marginTop="150dp"
-            android:layout_marginStart="16dp"
-            android:textStyle="bold"
-            android:textSize="50sp"
-            android:textColor="@color/white"
-            android:textAllCaps="true"
-            android:text="@string/homescreen_title"/>
-
-        <TextView
-            android:id="@+id/movie_part_title"
-            android:layout_below="@id/backdrop_img"
+        <include
+            android:id="@+id/tool_bar"
+            layout="@layout/tool_bar" />
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/movie_part_title"
-            android:textAllCaps="true"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/movies_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/movie_part_title"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"/>
-
-        <TextView
-            android:id="@+id/show_part_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/movies_rv"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/show_part_title"
-            android:textAllCaps="true" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/shows_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/show_part_title"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/srch"
-            android:hint="Rechercher un film ou une série"
-            android:layout_below="@+id/shows_rv"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:gravity="left"
-            />
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/srch"
-            android:stretchColumns="0,1"
-            android:id="@+id/srchTable"
-            >
-            <TableRow
+            android:layout_below="@id/tool_bar"
+            android:id="@+id/main_activity">
+            <ImageView
+                android:id="@+id/backdrop_img"
                 android:layout_width="match_parent"
-                >
-                <Button
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@+id/film_rv"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="10dp"
-                    android:onClick="search"
-                    android:text="film"
-                    android:layout_column="0"
-                />
+                android:layout_height="225dp"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/home_cover"
+                android:scaleType="centerCrop"
+                tools:ignore="ContentDescription" />
 
-            <Button
-                android:layout_alignParentRight="true"
+            <ImageView
+                android:id="@+id/gradient_img"
+                android:layout_width="match_parent"
+                android:layout_height="225dp"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/gradient_bg"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@+id/homepage_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/gradient_img"
+                android:layout_marginTop="150dp"
+                android:layout_marginStart="16dp"
+                android:textStyle="bold"
+                android:textSize="50sp"
+                android:textColor="@color/white"
+                android:textAllCaps="true"
+                android:text="@string/homescreen_title"/>
+
+            <TextView
+                android:id="@+id/movie_part_title"
+                android:layout_below="@id/backdrop_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="@string/movie_part_title"
+                android:textAllCaps="true"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/movies_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/movie_part_title"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"/>
+
+            <TextView
+                android:id="@+id/show_part_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/movies_rv"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="@string/show_part_title"
+                android:textAllCaps="true" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/shows_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/show_part_title"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/srch"
+                android:hint="Rechercher un film ou une série"
                 android:layout_below="@+id/shows_rv"
                 android:layout_marginTop="16dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:onClick="search"
-                android:text="serie"
-                android:layout_column="1"
+                android:gravity="left"
                 />
-            </TableRow>
-        </TableLayout>
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/srch"
+                android:stretchColumns="0,1"
+                android:id="@+id/srchTable"
+                >
+                <TableRow
+                    android:layout_width="match_parent"
+                    >
+                    <Button
+                        android:layout_alignParentRight="true"
+                        android:layout_below="@+id/film_rv"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="10dp"
+                        android:onClick="search"
+                        android:text="film"
+                        android:layout_column="0"
+                        />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/srchTable"
-            android:id="@+id/wlist"
-            android:text="Aller voir ma Watchlist"
-            android:onClick="goToWatchlist"
-            android:layout_marginTop="16dp"
-            tools:ignore="NotSibling" />
+                    <Button
+                        android:layout_alignParentRight="true"
+                        android:layout_below="@+id/shows_rv"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginRight="15dp"
+                        android:onClick="search"
+                        android:text="serie"
+                        android:layout_column="1"
+                        />
+                </TableRow>
+            </TableLayout>
+        </RelativeLayout>
     </RelativeLayout>
+
 </ScrollView>
